// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App passes actions to <Buttons /> 1`] = `
"<main class=\\"css-cf8zkh\\">
  <Hero></Hero>
  <Calculator>
    <Display></Display>
    <Buttons actions=\\"[object Object]\\"></Buttons>
  </Calculator>
</main>"
`;

exports[`App passes output to <Display /> 1`] = `
"<main class=\\"css-cf8zkh\\">
  <Hero></Hero>
  <Calculator>
    <Display output=\\"12\\"></Display>
    <Buttons></Buttons>
  </Calculator>
</main>"
`;

exports[`App renders 1`] = `
"<main class=\\"css-cf8zkh\\">
  <Hero></Hero>
  <Calculator>
    <Display></Display>
    <Buttons></Buttons>
  </Calculator>
</main>"
`;
